<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Medipal</string>


    <!-- Menu / Tabs -->
    <string name="menu_home">Home</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_records">Records</string>
    <string name="menu_profile">Profile</string>

    <!-- Onboarding -->
    <string name="onb_title_1">Never Miss a Dose Again</string>
    <string name="onb_desc_1">Set smart daily medication reminders and refill alerts.</string>
    <string name="onb_title_2">Your Records, Organized</string>
    <string name="onb_desc_2">Securely store prescriptions and medical reports.</string>
    <string name="onb_title_3">Track Your Health Daily</string>
    <string name="onb_desc_3">Log symptoms and vitals to monitor your wellness.</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>

    <!-- Profile strings -->
    <string name="profile_page_title">Profile</string>
    <string name="profile_name">Jane Doe</string>
    <string name="profile_details">Age 32 • Medical ID: MP-10923</string>
    <string name="pills_taken">Pills Taken: 12</string>
    <string name="missed_pills">Missed: 1</string>
    <string name="streak_days">Streak: 4 days</string>
    <string name="settings">Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="sign_out">Sign Out</string>

    <!-- Other -->
    <string name="add_med">Add New Medication</string>
    <string name="upload_record">Upload Prescription / Report</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="today_s_medications">Today\'s Medications</string>
    <string name="welcome_to_medipal">Welcome to MediPal</string>
    <string name="track_your_pills_manage_reminders_and_stay_healthy_with_medipal">Track your pills, manage reminders, and stay healthy with MediPal.</string>
    <string name="medipal_your_health_in_your_hands">MediPal — Your Health, In Your Hands</string>
    <string name="todo">TODO</string>
    <string name="never_miss_a_dose_again">Never Miss a Dose Again</string>
    <string name="set_daily_medication_reminders_and_refill_alerts_to_stay_on_track_with_your_health">Set daily medication reminders and refill alerts to stay on track with your health.</string>
    <string name="next">Next</string>
    <string name="skips">Skip</string>
    <string name="track_your_vitals_amp_symptoms"><![CDATA[Track Your Vitals & Symptoms]]></string>
    <string name="monitor_your_health_daily_with_medipal_keep_track_of_your_vitals_and_symptoms_to_stay_informed_about_your_well_being">Monitor your health daily with MediPal. Keep track of your vitals and symptoms to stay informed about your well-being.</string>
    <string name="medipal">MediPal</string>
    <string name="today_s_medicationss">Today\'s Medications</string>
    <string name="todoo">TODO</string>
    <string name="ibuprofen">Ibuprofen</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="metformin">Metformin</string>
    <string name="_6_00_pm">6:00 PM</string>
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="quick_access">Quick Access</string>
    <string name="track_vitals">Track Vitals</string>
    <string name="doctor_s_appointment">Doctor\'s Appointment</string>
    <string name="tomorrow_10_00_am">Tomorrow, 10:00 AM</string>
    <string name="next_week">Next Week</string>
    <string name="refill_prescription">Refill Prescription</string>
    <string name="welcome_back_medipal">Welcome back MediPal</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="don_t_have_an_accounts">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_ups">Sign Up</string>
    <string name="create_your_account">Create your account</string>
    <string name="close">close</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="reminders">Reminders</string>
    <string name="medication_a">Medication A</string>
    <string name="_1_pill">1 pill</string>
    <string name="_2_00_pm">2:00 PM</string>
    <string name="_12_00_Pm">12:00 PM</string>
    <string name="_6_00_Pm">6:00 PM</string>
    <string name="medication_b">Medication B</string>
    <string name="medication_c">Medication C</string>
    <string name="today">Today</string>
    <string name="refill_in_3_days">Refill in 3 days</string>
    <string name="refill_in_7_days">Refill in 7 days</string>
    <string name="refill_in_10_days">Refill in 10 days</string>
    <string name="prescription_for_ibuprofen">Prescription for Ibuprofen</string>
    <string name="uploaded_2024_07_20">Uploaded: 2024–07–20</string>
    <string name="uploaded_2024_07_15">Uploaded: 2024–07–15</string>
    <string name="immunization_record">Immunization Record</string>
    <string name="uploaded_2024_07_10">Uploaded: 2024–07–10</string>
    <string name="medical_documents">Medical Documents</string>
    <string name="records">Records</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="upload_new_document">Upload New Document</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="sophia_carter">Sophia Carter</string>
    <string name="female_32">Female, 32</string>
    <string name="medical_id_123456789">Medical ID: 123456789</string>
    <string name="health_summary">Health Summary</string>
    <string name="pills_takens">Pills Taken</string>
    <string name="_120">120</string>
    <string name="pills_missed">Pills Missed</string>
    <string name="_5">5</string>
    <string name="reminders_set">Reminders Set</string>
    <string name="_3">3</string>
    <string name="settingss">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="enable_or_disable_notifications">Enable or disable notifications</string>
    <string name="theme">Theme</string>
    <string name="choose_your_preferred_theme">Choose your preferred theme</string>
    <string name="dark">Dark</string>
    <string name="signout">SignOut</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="select_theme">Select Theme</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="systolic_diastolic">Systolic/Diastolic</string>
    <string name="log">Log</string>
    <string name="_120_80_mmhg">120/80 mmHg</string>
    <string name="blood_pressure_history">Blood Pressure History</string>
    <string name="_120_80">120/80</string>
    <string name="last_7_days_2">Last 7 Days +2%</string>
    <string name="glucose_levels">Glucose Levels</string>
    <string name="fasting_glucose">Fasting Glucose</string>
    <string name="_90_mg_dl">90 mg/dL</string>
    <string name="glucose_levels_history">Glucose Levels History</string>
    <string name="_90">90</string>
    <string name="last_7_days_1">Last 7 Days -1%</string>
    <string name="last_7_days_3">Last 7 Days +3%</string>
    <string name="_70">70</string>
    <string name="heart_rate_history">Heart Rate History</string>
    <string name="_70_bpm">70 bpm</string>
    <string name="resting_heart_rate">Resting Heart Rate</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="home_fragments">Home Fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="medipal_your_health_nin_your_hands">MediPal — Your Health,\nIn Your Hands</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_vital">Track Vital</string>
    <string name="todo1">TODO</string>
    <string name="ready_to_simplify_your_health">Ready to Simplify Your Health?</string>
    <string name="take_control_of_your_well_being_with_medipal_start_managing_your_health_today">Take control of your well-being with MediPal. Start managing your health today.</string>
</resources>
