<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F2124"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/getstart" />

    <TextView
        android:id="@+id/textView"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ready_to_simplify_your_health"
        />

    <TextView
        android:id="@+id/textView"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/take_control_of_your_well_being_with_medipal_start_managing_your_health_today"
        tools:ignore="DuplicateIds" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="130dp"
        android:background="#0F2124"
        android:orientation="vertical"
        tools:ignore="DuplicateIds">
    </LinearLayout>


    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:background="@drawable/next"
        android:text="@string/get_started"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="16dp" />

</LinearLayout>
